# deskname

./: .gitignore  README.md  deskname.iss  pyproject.toml
.github/workflows/: release.yml
deskname/: __init__.py  app.py
tests/: test_app.py
