[project]
name = "deskname"
version = "0.1.2"
description = "Virtual Desktop Name Display for Windows - Shows current virtual desktop name in a floating window"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyvda>=0.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=deskname --cov-report=term-missing"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py311"
line-length = 88
select = ["E", "F", "B", "I", "N", "UP", "ANN", "ARG", "C4"]
